--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ importlib_metadata==8.5.0
 macholib==1.16.3
 openpyxl==3.1.5
 packaging==24.2
+pillow==11.0.0
 pyinstaller==6.11.1
 pyinstaller-hooks-contrib==2024.10
+ttkbootstrap==1.10.1
 zipp==3.21.0
